--- a/.github/workflows/publish-to-pypi.yml
+++ b/.github/workflows/publish-to-pypi.yml
@@ -1,33 +1,31 @@
-name: Publish bestdori_api package to PyPI
+name: Upload Python Package
 
 on:
   release:
     types: [published]
+    
+  workflow_dispatch:
 
 jobs:
-  build-n-publish:
-    name: Build and publish bestdori_api Package to PyPI
-    runs-on: ubuntu-18.04
+  deploy:
+
+    runs-on: ubuntu-latest
 
     steps:
     - uses: actions/checkout@v2
-
-    - name: Set up Python 🐍
+    - name: Set up Python
       uses: actions/setup-python@v2
       with:
-        python-version: 3.8
-
-    - name: Install dependencies 📦
+        python-version: '3.8'
+    - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
         pip install setuptools wheel twine
-
-    - name: Build distribution 👷‍♂️
+    - name: Build distribution
       run: |
         python setup.py sdist bdist_wheel
-
-    - name: Publish distribution 📦 to PyPI
+    - name: Publish to PyPI
       uses: pypa/gh-action-pypi-publish@master
       with:
         user: __token__
-        password: pypi-AgEIcHlwaS5vcmcCJGZkMjFlNDFmLTgyZDgtNDMxNi04NzljLTYyNWNiZTI4YzkxZgACKlszLCJmNTE4ZjhhNy02YjMzLTRlOTItOWUzNy00NDgzMGY4MTEyMWQiXQAABiCEiMCJYOiHXz8N_HUHgmWOsMIxD2iNeWOUeKi4WM4H6A
+        password: ${{ secrets.PYPI_TOKEN }}
