--- a/.github/workflows/publish-to-pypi.yml
+++ b/.github/workflows/publish-to-pypi.yml
@@ -7,9 +7,13 @@ on:
     
   workflow_dispatch:
 
+# 添加显式权限声明
+permissions:
+  contents: write  # 需要写入仓库内容的权限
+  packages: write  # 如果需要发布到 GitHub Packages 则需要此权限
+
 jobs:
   deploy:
-
     runs-on: ubuntu-latest
 
     steps:
@@ -36,10 +40,15 @@ jobs:
       run: |
         python -m build
       
-    - name: Publish to PyPI and Release
+    # 使用更可靠的方法上传到 GitHub Release
+    - name: Upload to GitHub Release
+      uses: softprops/action-gh-release@v1
+      with:
+        files: |
+          dist/*.whl
+          dist/*.tar.gz
+        tag_name: ${{ steps.version.outputs.TAG_NAME }}
+      
+    - name: Publish to PyPI
       run: |
-        export GH_TOKEN=$GITHUB_TOKEN
-        gh release upload --clobber ${{ steps.version.outputs.TAG_NAME }} dist/*.tar.gz dist/*.whl
         python -m twine upload dist/* --repository-url https://upload.pypi.org/legacy/ --username __token__ --password ${{ secrets.PYPI_TOKEN }}
-      env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
