update: 添加项目文档 #1

--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,20 @@
 **/__pycache__/
+
 /bestdori-api.egg-info/
 /build/
 /dist/
+
 /for_test/test.py
+
 /.vscode/
+
 /.venv/
+
 test.py
 tests/
+
 requirements.txt
+
+node_modules/
+docs/.vitepress/dist/
+docs/.vitepress/cache/
